--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "requests>=2.32.3",
     "shapely>=2.1.1",
     "streamlit>=1.45.1",
+    "streamlit-shadcn-ui>=0.1.18",
     "vegafusion[embed]>=1.5.0",
     "watchdog>=6.0.0",
 ]
